--- a/Online Shop/Index.html
+++ b/Online Shop/Index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="Content/bootstrap.min.css">
+    <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/jquery-3.7.0.min.js"></script>
     <script src="Scripts/modernizr-2.8.3.js"></script>
     <style>
@@ -33,7 +34,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-success">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
         <div class="container">
             <a href="/" class="navbar-brand">Shopy</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
@@ -45,8 +46,8 @@
                     <li><a href="/" class="nav-link">Početna stranica</a></li>
 
                     <li>
-                        <button type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</button>
-                        <button type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</button>
+                        <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
+                        <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
                     </li>
                 </ul>
             </div>
