--- a/Online Shop/Registracija.html
+++ b/Online Shop/Registracija.html
@@ -44,7 +44,7 @@
             contentType: "application/json; charset=utf-8",
             success: function (response) {
                 if (response != null) {
-                    if (JSON.parse(response) === "OK") // korisnik je ulogovan, ne moze da se registruje
+                    if (JSON.parse(response).Kod === "0") // korisnik je ulogovan, ne moze da se registruje
                     {
                         window.location.href = "Index.html";
                     }
@@ -64,6 +64,104 @@
                 var pol = $("#pol").val();
                 var email = $("#email").val();
                 var datumRodjenja = new Date($("#datumrodjenja").val());
+
+                var greska = false;
+
+                // provera unosa na klijentu
+                if (korisnickoIme.length < 6) {
+                    $("#g1").addClass("d-block");
+                    $("#g1").removeClass("d-none");
+                    $("#korisnickoime").addClass("is-invalid");
+                    $("#g1").text("Korisničko ime mora imati minimalno 6 karaktera!");
+                    greska = true;
+                }
+                else {
+                    $("#g1").addClass("d-none");
+                    $("#korisnickoime").removeClass("is-invalid");
+                    $("#korisnickoime").removeClass("invalid-feedback");
+                    $("#korisnickoime").add("is-valid");
+                }
+
+                if (lozinka.length < 6) {
+                    $("#g2").addClass("d-block");
+                    $("#g2").removeClass("d-none");
+                    $("#lozinka").addClass("is-invalid");
+                    $("#g2").text("Lozinka mora imati minimalno 6 karaktera!");
+                    greska = true;
+                }
+                else {
+                    $("#g2").addClass("d-none");
+                    $("#lozinka").removeClass("is-invalid");
+                    $("#lozinka").removeClass("invalid-feedback");
+                    $("#lozinka").add("is-valid");
+                }
+
+                if (ime.length < 3) {
+                    $("#g3").addClass("d-block");
+                    $("#g3").removeClass("d-none");
+                    $("#ime").addClass("is-invalid");
+                    $("#g3").removeClass("d-none");
+                    $("#g3").text("Ime mora imati minimalno 3 karaktera!");
+                    greska = true;
+                }
+                else {
+                    $("#g3").addClass("d-none");
+                    $("#ime").removeClass("is-invalid");
+                    $("#ime").removeClass("invalid-feedback");
+                    $("#ime").add("is-valid");
+                }
+
+                if (prezime.length < 6) {
+                    $("#g4").addClass("d-block");
+                    $("#g4").removeClass("d-none");
+                    $("#prezime").addClass("is-invalid");
+                    $("#g4").text("Prezime mora imati minimalno 6 karaktera!");
+                    greska = true;
+                }
+                else {
+                    $("#g4").addClass("d-none");
+                    $("#prezime").removeClass("is-invalid");
+                    $("#prezime").removeClass("invalid-feedback");
+                    $("#prezime").add("is-valid");
+                }
+
+                var regexEmail = /^[A-Z0-9._%+-]+@([A-Z0-9-]+\.)+[A-Z]{2,4}$/i;
+                if (regexEmail.test(email) === false) {
+                    $("#g5").addClass("d-block");
+                    $("#g5").removeClass("d-none");
+                    $("#email").addClass("is-invalid");
+                    $("#g5").removeClass("d-none");
+                    $("#g5").text("Email nije unet u validnom formatu!");
+                    greska = true;
+                }
+                else {
+                    $("#g5").addClass("d-none");
+                    $("#email").removeClass("is-invalid");
+                    $("#email").removeClass("invalid-feedback");
+                    $("#email").add("is-valid");
+                }
+
+                var minDate = Date.parse("1970-01-01");
+                var maxDate = Date.parse("2020-01-01");
+                var str = $("#datumrodjenja").val().replace(".", "/");
+                if (str === "") str = "1950-01-01";
+                var datum = Date.parse(str);
+
+                if ((datum < minDate) || (datum > maxDate)) {
+                    $("#g6").addClass("d-block");
+                    $("#g6").removeClass("d-none");
+                    $("#datumRodjenja").addClass("is-invalid");
+                    $("#g6").text("Niste uneli datum rođenja u dozvoljenom opsegu!");
+                    greska = true;
+                }
+                else {
+                    $("#g6").addClass("d-none");
+                    $("#datumRodjenja").removeClass("is-invalid");
+                    $("#datumRodjenja").removeClass("invalid-feedback");
+                    $("#datumRodjenja").add("is-valid");
+                }
+
+                if (greska === true) return; // ne izvrsava se ajax poziv - rasterecuje se server od callbacks
 
                 // ajax poziv ka api-ju za vrsenje registracije
                 $.ajax({
@@ -85,7 +183,7 @@
                     contentType: "application/json; charset=utf-8",
                     success: function (response) {
                         if (response != null) {
-                            if (JSON.parse(response) === "OK") // korisnik se registrovao uspesno
+                            if (JSON.parse(response).Kod === 0) // korisnik se registrovao uspesno
                             {
                                 window.location.href = "Index.html";
                                 return false;
@@ -94,7 +192,7 @@
                             {
                                 // desila se greska - prikazi je
                                 $("#divgreske").removeClass('d-none');
-                                $("#greske").text(JSON.parse(response));
+                                $("#greske").text(JSON.parse(response).Poruka);
                             }
                         }
                     }
@@ -137,7 +235,7 @@
                                     </div>
                                   <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                     <div class="card-body p-4 p-lg-5 text-black">
-                                        <form class="was-validated">
+                                        <form>
                                             <div class="d-flex mb-3 pb-1">
                                                 <span class="h1 fw-bold mb-0">Shopy</span>
                                             </div>
@@ -154,25 +252,25 @@
                                                 <div class="form-outline mb-4">
                                                     <label class="form-label" for="korisnickoime">Korisničko ime</label>
                                                     <input type="text" id="korisnickoime" autofocus class="form-control form-control-lg" required />
-                                                    <div class="invalid-feedback">Molimo Vas popunite ovo polje.</div>
+                                                    <span id="g1" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                 </div>
 
                                                 <div class="form-outline mb-4">
                                                     <label class="form-label" for="lozinka">Lozinka</label>
                                                     <input type="password" id="lozinka" class="form-control form-control-lg" required />
-                                                    <div class="invalid-feedback">Molimo Vas popunite ovo polje.</div>
+                                                    <span id="g2" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                 </div>
 
                                                 <div class="form-outline mb-4">
                                                     <label class="form-label" for="ime">Ime</label>
                                                     <input type="text" id="ime" class="form-control form-control-lg" required />
-                                                    <div class="invalid-feedback">Molimo Vas popunite ovo polje.</div>
+                                                    <span id="g3" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                 </div>
 
                                                 <div class="form-outline mb-4">
                                                     <label class="form-label" for="prezime">Prezime</label>
                                                     <input type="text" id="prezime" class="form-control form-control-lg" required />
-                                                    <div class="invalid-feedback">Molimo Vas popunite ovo polje.</div>
+                                                    <span id="g4" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                 </div>
 
                                                 <div class="form-outline mb-4">
@@ -182,19 +280,18 @@
                                                         <option value="Ženski">Ženski</option>
                                                         <option value="Drugo">Drugo</option>
                                                     </select>
-                                                    <div class="invalid-feedback">Molimo Vas popunite ovo polje.</div>
                                                 </div>
 
                                                 <div class="form-outline mb-4">
                                                     <label class="form-label" for="email">Email adresa</label>
                                                     <input type="email" id="email" class="form-control form-control-lg" required />
-                                                    <div class="invalid-feedback">Unesite email u formatu korisnik@shopy.com.</div>
+                                                    <span id="g5" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                 </div>
 
                                                 <div class="form-outline mb-4">
                                                     <label class="form-label" for="datumrodjenja">Datum rođenja</label>
-                                                    <input type="date" id="datumrodjenja" min="1950-01-01" max="2020-01-01" class="form-control form-control-lg" required />
-                                                    <div class="invalid-feedback">Molimo Vas popunite ovo polje.</div>
+                                                    <input type="date" id="datumrodjenja" min="1970-01-01" max="2020-01-01" class="form-control form-control-lg" required />
+                                                    <span id="g6" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                 </div>
 
                                                 <p class="my-3 pb-lg-2" style="color: #393f81;">
