upda ficons and auth controller

--- a/Online Shop/Index.html
+++ b/Online Shop/Index.html
@@ -127,6 +127,7 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
+                                <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
                             </ul>
