--- a/Online Shop/MojProfil.html
+++ b/Online Shop/MojProfil.html
@@ -81,21 +81,7 @@
                         $('#poruka').text("Dobrodošli nazad, " + data.KorisnickoIme);
 
                         // Popuni formu
-                        $("#korisnickoime").val(data.KorisnickoIme);
-                        $("#ime").val(data.Ime);
-                        $("#prezime").val(data.Prezime);
-                        $("#pol").val(data.Pol);
-                        $("#email").val(data.Email);
-                        
-                        let today = new Date(data.DatumRodjenja);
-
-                        let day = (today.getDate());
-                        let month = ('0' + (today.getMonth() + 1)).slice(-2);
-                        let year = today.getFullYear();
-
-                        let currentDate = `${day}.${month}.${year}`;
-                        $("#trenutni").text("Datum rođenja: " + currentDate + " (trenutni)");
-                        STARI_DATUM = currentDate;
+                       
                     });
                 }
                 else {
@@ -135,138 +121,7 @@
                         }
                     }
                 });
-            });
-
-            // cuvanje izmena
-            $("#azurirajbtn").on('click', function () {
-                var korisnickoIme = $("#korisnickoime").val();
-                var ime = $("#ime").val();
-                var prezime = $("#prezime").val();
-                var pol = $("#pol").val();
-                var email = $("#email").val();
-                var datumRodjenja = $("#datumrodjenja").val();
-
-                var greska = false;
-
-                // provera unosa na klijentu
-                if (korisnickoIme.length < 6) {
-                    $("#g1").addClass("d-block");
-                    $("#g1").removeClass("d-none");
-                    $("#korisnickoime").addClass("is-invalid");
-                    $("#g1").text("Korisničko ime mora imati minimalno 6 karaktera!");
-                    greska = true;
-                }
-                else {
-                    $("#g1").addClass("d-none");
-                    $("#korisnickoime").removeClass("is-invalid");
-                    $("#korisnickoime").removeClass("invalid-feedback");
-                    $("#korisnickoime").add("is-valid");
-                }
-
-                if (ime.length < 3) {
-                    $("#g3").addClass("d-block");
-                    $("#g3").removeClass("d-none");
-                    $("#ime").addClass("is-invalid");
-                    $("#g3").removeClass("d-none");
-                    $("#g3").text("Ime mora imati minimalno 3 karaktera!");
-                    greska = true;
-                }
-                else {
-                    $("#g3").addClass("d-none");
-                    $("#ime").removeClass("is-invalid");
-                    $("#ime").removeClass("invalid-feedback");
-                    $("#ime").add("is-valid");
-                }
-
-                if (prezime.length < 6) {
-                    $("#g4").addClass("d-block");
-                    $("#g4").removeClass("d-none");
-                    $("#prezime").addClass("is-invalid");
-                    $("#g4").text("Prezime mora imati minimalno 6 karaktera!");
-                    greska = true;
-                }
-                else {
-                    $("#g4").addClass("d-none");
-                    $("#prezime").removeClass("is-invalid");
-                    $("#prezime").removeClass("invalid-feedback");
-                    $("#prezime").add("is-valid");
-                }
-
-                var regexEmail = /^[A-Z0-9._%+-]+@([A-Z0-9-]+\.)+[A-Z]{2,4}$/i;
-                if (regexEmail.test(email) === false) {
-                    $("#g5").addClass("d-block");
-                    $("#g5").removeClass("d-none");
-                    $("#email").addClass("is-invalid");
-                    $("#g5").removeClass("d-none");
-                    $("#g5").text("Email nije unet u validnom formatu!");
-                    greska = true;
-                }
-                else {
-                    $("#g5").addClass("d-none");
-                    $("#email").removeClass("is-invalid");
-                    $("#email").removeClass("invalid-feedback");
-                    $("#email").add("is-valid");
-                }
-
-                var minDate = Date.parse("1970-01-01");
-                var maxDate = Date.parse("2020-01-01");
-                if (datumRodjenja === "") // datum se nije promenio
-                    datumRodjenja = STARI_DATUM;
-
-                var datum = Date.parse(datumRodjenja.split(".").reverse().join("-"));
-                datumRodjenja = Date.parse(datumRodjenja.split(".").reverse().join("-"));
-                datumRodjenja = new Date(datumRodjenja).toISOString();
-
-                if ((datum < minDate) || (datum > maxDate)) {
-                    $("#g6").addClass("d-block");
-                    $("#g6").removeClass("d-none");
-                    $("#datumRodjenja").addClass("is-invalid");
-                    $("#g6").text("Niste uneli datum rođenja u dozvoljenom opsegu!");
-                    greska = true;
-                }
-                else {
-                    $("#g6").addClass("d-none");
-                    $("#datumRodjenja").removeClass("is-invalid");
-                    $("#datumRodjenja").removeClass("invalid-feedback");
-                    $("#datumRodjenja").add("is-valid");
-                }
-
-                if (greska === true) return; // ne izvrsava se ajax poziv - rasterecuje se server od callbacks
-
-                // ajax poziv ka api-ju za vrsenje registracije
-                $.ajax({
-                    url: "/api/auth/AzuriranjeProfila",
-                    type: "POST",
-                    data: JSON.stringify({
-                        KorisnickoIme: korisnickoIme,
-                        Ime: ime,
-                        Lozinka: "oc_auth_434u3dfs-dsdw-dummy",
-                        Prezime: prezime,
-                        Pol: pol,
-                        Email: email,
-                        DatumRodjenja: datumRodjenja
-                    }),
-
-                    async: false,
-                    cache: false,
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: function (response) {
-                        if (response != null) {
-                            if (JSON.parse(response).Kod === 0) // azuriranje podataka je proslo uspesno
-                            {
-                                window.location.href = "MojProfil.html";
-                                return false;
-                            }
-                            else {
-                                // desila se greska - prikazi je
-                                $("#divgreske").removeClass('d-none');
-                                $("#greske").text(JSON.parse(response).Poruka);
-                            }
-                        }
-                    }
-                });
-            });
+            });               
         });
     </script>
 </head>
@@ -314,7 +169,7 @@
                                 <div class="card" style="border-radius: 1rem;">
                                     <div class="row g-0">
                                         <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                            <img src="Images/rgbg.jpg" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                                            <img src="Images/mainpf.jpg" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
                                         </div>
                                         <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                             <div class="card-body p-4 p-lg-5 text-black">
@@ -323,62 +178,42 @@
                                                         <span class="h1 fw-bold mb-0">Shopy</span>
                                                     </div>
 
-                                                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Ažuriranje korisničkog naloga</h5>
+                                                    <h5 class="fw-normal mb-5 pb-2" style="letter-spacing: 1px;">Detalji i opcije Vašeg naloga</h5>
 
-                                                    <div id="divgreske" class="alert alert-danger d-flex align-items-center" role="alert">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-exclamation-mark" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"> <path stroke="none" d="M0 0h24v24H0z" fill="none" /> <path d="M12 19v.01" /> <path d="M12 15v-10" /> </svg>
-                                                        <span id="greske">
-
-                                                        </span>
-                                                    </div>
-
-                                                    <div class="form-outline mb-4">
-                                                        <label class="form-label" for="korisnickoime">Korisničko ime</label>
-                                                        <input type="text" id="korisnickoime" autofocus class="form-control form-control-lg" required />
-                                                        <span id="g1" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
-                                                    </div>
-
-                                                    <div class="form-outline mb-4">
-                                                        <label class="form-label" for="ime">Ime</label>
-                                                        <input type="text" id="ime" class="form-control form-control-lg" required />
-                                                        <span id="g3" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
-                                                    </div>
-
-                                                    <div class="form-outline mb-4">
-                                                        <label class="form-label" for="prezime">Prezime</label>
-                                                        <input type="text" id="prezime" class="form-control form-control-lg" required />
-                                                        <span id="g4" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
-                                                    </div>
-
-                                                    <div class="form-outline mb-4">
-                                                        <label class="form-label" for="pol">Pol</label>
-                                                        <select id="pol" class="form-control form-control-lg" required>
-                                                            <option value="Muški">Muški</option>
-                                                            <option value="Ženski">Ženski</option>
-                                                            <option value="Drugo">Drugo</option>
-                                                        </select>
-                                                    </div>
-
-                                                    <div class="form-outline mb-4">
-                                                        <label class="form-label" for="email">Email adresa</label>
-                                                        <input type="email" id="email" class="form-control form-control-lg" required />
-                                                        <span id="g5" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
-                                                    </div>
-
-                                                    <div class="form-outline mb-4">
-                                                        <label class="form-label" for="datumrodjenja" id="trenutni">Datum rođenja</label>
-                                                        <input type="date" id="datumrodjenja" min="1970-01-01" max="2020-01-01" class="form-control form-control-lg" required />
-                                                        <span id="g6" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
-                                                    </div>
-
-                                                    <p class="my-3 pb-lg-2 fw-bold text-danger">
-                                                        Odabirom novog datuma rođenja, prethodni datum će biti prepisan novim!
-                                                    </p>
                                                     <div class="pt-1 mb-4">
-                                                        <button class="btn btn-dark btn-lg btn-block" id="azurirajbtn" type="button">Sačuvaj izmene</button>
+                                                        <button class="btn btn-dark btn-lg btn-block" id="izmenaprofila" type="button">Izmena profila</button>
+                                                    </div>
+
+                                                    <div id="kupacmeni">
+                                                        <div class="pt-1 mb-4">
+                                                            <button class="btn btn-dark btn-lg btn-block" id="mojeporudzbine" type="button">Moje porudžbine</button>
+                                                        </div>
+
+                                                        <div class="pt-1 mb-4">
+                                                            <button class="btn btn-dark btn-lg btn-block" id="omiljeniproizvodi" type="button">Omiljeni proizvodi</button>
+                                                        </div>
+                                                    </div>
+
+                                                    <div id="prodavacmeni">
+                                                        <div class="pt-1 mb-4">
+                                                            <button class="btn btn-dark btn-lg btn-block" id="mojiproizvodi" type="button">Moji proizvodi</button>
+                                                        </div>
+                                                    </div>
+
+                                                    <div id="adminmeni">
+                                                        <div class="pt-1 mb-4">
+                                                            <button class="btn btn-dark btn-lg btn-block" id="listakorisnika" type="button">Lista korisnika</button>
+                                                        </div>
+
+                                                        <div class="pt-1 mb-4">
+                                                            <button class="btn btn-dark btn-lg btn-block" id="listaproizvoda" type="button">Lista proizvoda</button>
+                                                        </div>
+
+                                                        <div class="pt-1 mb-4">
+                                                            <button class="btn btn-dark btn-lg btn-block" id="listaporudzbina" type="button">Lista porudžbina</button>
+                                                        </div>
                                                     </div>
                                                 </form>
-
                                             </div>
                                         </div>
                                     </div>
