--- a/Online Shop/ListaKorisnika.html
+++ b/Online Shop/ListaKorisnika.html
@@ -41,6 +41,24 @@
         }
     </style>
     <script>
+        // brisanje korisnika
+        function Brisanje(id) {
+            $.ajax({
+                url: "/api/user/Ulogovan",
+                type: "POST",
+                data: {
+                    Id: id
+                },
+                async: false,
+                cache: false,
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function (response) {
+                    console.log("dada");
+                }
+            });
+        }
+
         // ako je ulogovan, prebaci ga na index - slucaj da ide na back opciju
         $.ajax({
             url: "/api/auth/Ulogovan",
@@ -129,6 +147,8 @@
                                                             '<td>' + k.Email + '</td>' +
                                                             '<td>' + new Date(k.DatumRodjenja).toLocaleDateString("en-GB") + '</td>' +
                                                             '<td><b>' + uloga.toUpperCase() + '</b></td>' +
+                                                            '<td class="d-flex justify-content-center"><button class="btn btn-dark" type="button" onclick="Izmena(' + k.KorisnickoIme + ')">Izmena</button>&emsp;' +
+                                                            '<button class="btn btn-danger" type="button" onclick="Brisanje(\'' + k.KorisnickoIme + '\')">Brisanje</button></td>' +
                                 '</tr>');
                         }); 
                     });
@@ -160,6 +180,7 @@
                 });
             });
         });
+
     </script>
 </head>
 <body>
@@ -212,7 +233,7 @@
                                                         <span class="h1 fw-bold mb-0">Shopy Korisnici</span>
                                                     </div>
 
-                                                    <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih korisnika registrovanih na Shopy platofmu</h5>
+                                                    <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih korisnika registrovanih na Shopy platformu</h5>
 
                                                     <div class="pt-1 mb-4">
                                                         <a href="DodajProdavca.html" class="btn btn-dark btn-lg btn-block">➕ Dodavanje prodavca</a>
